--- a/sdk/web-pubsub/web-pubsub-client/package.json
+++ b/sdk/web-pubsub/web-pubsub-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@azure/web-pubsub-client",
   "version": "1.0.0",
-  "description": "Azure Web PubSub CloudEvents handlers",
+  "description": "Azure Web PubSub Client",
   "sdk-type": "client",
   "main": "dist/index.js",
   "module": "dist-esm/src/index.js",
@@ -57,7 +57,7 @@
   "dependencies": {
     "tslib": "^2.2.0",
     "@azure/logger": "^1.0.0",
-    "@azure/abort-controller": "1.1.1",
+    "@azure/abort-controller": "~1.1.1",
     "@azure/core-rest-pipeline": "~1.9.1",
     "@types/ws": "~8.5.3"
   },
