--- a/sdk/web-pubsub/web-pubsub-client/tsconfig.json
+++ b/sdk/web-pubsub/web-pubsub-client/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.package",
   "compilerOptions": {
     "declaration": true,
+    "declarationDir": "./types",
     "module": "es6",
     "moduleResolution": "node",
     "strict": true,
@@ -10,13 +11,17 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "outDir": "./dist-esm",
+    "rootDir": ".",
     "target": "es6",
     "sourceMap": true,
     "declarationMap": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "paths": {
+      "@azure/web-pubsub-client": ["./src/index"]
+    }
   },
   "include": [
     "src/**/*.ts",
