--- a/sdk/web-pubsub/web-pubsub-client/package.json
+++ b/sdk/web-pubsub/web-pubsub-client/package.json
@@ -100,7 +100,8 @@
     "rimraf": "^3.0.0",
     "sinon": "^9.0.2",
     "source-map-support": "^0.5.9",
-    "typescript": "~4.6.0"
+    "typescript": "~4.6.0",
+    "@azure/web-pubsub": "1.1.0"
   },
   "//sampleConfiguration": {
     "productName": "Azure Web PubSub Client",
