--- a/sdk/web-pubsub/web-pubsub-client/package.json
+++ b/sdk/web-pubsub/web-pubsub-client/package.json
@@ -59,7 +59,8 @@
     "@azure/logger": "^1.0.0",
     "@azure/abort-controller": "~1.1.1",
     "@azure/core-rest-pipeline": "~1.9.1",
-    "@types/ws": "~8.5.3"
+    "@types/ws": "~8.5.3",
+    "ws": "~8.5"
   },
   "devDependencies": {
     "@azure/dev-tool": "^1.0.0",
